--- a/PatientRecordsModule/Themes/Generic.xaml
+++ b/PatientRecordsModule/Themes/Generic.xaml
@@ -1,16 +1,24 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:views="clr-namespace:Shared.PatientRecords.Views"
+                    xmlns:viewModels="clr-namespace:Shared.PatientRecords.ViewModels">
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="../Views/PersonHierarchicalAssignmentsView.xaml" />
         <ResourceDictionary Source="../Views/PersonHierarchicalRecordsView.xaml" />
         <ResourceDictionary Source="../Views/PersonHierarchicalVisitsView.xaml" />
         <ResourceDictionary Source="../Views/RecordCreateView.xaml" />
-        
+
         <ResourceDictionary Source="../Views/RecordTypesProtocols/DefaultProtocolView.xaml" />
         <ResourceDictionary Source="../Views/Diagnoses/MKBTreeView.xaml" />
         <ResourceDictionary Source="../Views/Diagnoses/ComplicationsTreeView.xaml" />
         <ResourceDictionary Source="../Views/Analyses/AnalyseCreateView.xaml" />
         <ResourceDictionary Source="../Views/Analyses/AnalyseProtocolView.xaml" />
         <ResourceDictionary Source="../Views/Analyses/AnalyseRefferencesView.xaml" />
+
+
     </ResourceDictionary.MergedDictionaries>
+
+    <DataTemplate DataType="{x:Type viewModels:PersonRecordEditorViewModel}">
+        <views:PersonRecordEditorView/>
+    </DataTemplate>
 </ResourceDictionary>
