--- a/PatientRecordsModule/Views/PersonHierarchicalAssignmentsView.xaml
+++ b/PatientRecordsModule/Views/PersonHierarchicalAssignmentsView.xaml
@@ -24,7 +24,7 @@
                 </TextBlock>
                 
                 <Image Grid.Row="1" Grid.Column="0" Grid.RowSpan="3" Source="pack://application:,,,/Core;component/Resources/Images/Assignment48x48.png" Margin="7,5,7,5" Height="36" Width="36"/>
-                <TextBlock Grid.Row="1" Grid.Column="1" Text="{Binding AssignDateTime}" Margin="0" Padding="0" FontSize="11" HorizontalAlignment="Left" VerticalAlignment="Center" FontStyle="Italic"/>
+                <TextBlock Grid.Row="1" Grid.Column="1" Text="{Binding ActualDateTime, StringFormat='dd.MM.yyyy HH:mm'}" Margin="0" Padding="0" FontSize="11" HorizontalAlignment="Left" VerticalAlignment="Center" FontStyle="Italic"/>
                 <TextBlock Grid.Row="2" Grid.Column="1" Text="{Binding RoomName}" Margin="0" Padding="0" FontSize="11" HorizontalAlignment="Left" VerticalAlignment="Center" FontStyle="Italic" TextTrimming="CharacterEllipsis" TextWrapping="NoWrap">
                     <TextBlock.ToolTip>
                         <TextBlock Text="{Binding RoomName}"/>
