Closes #148 - module content is hidden when last visible ribbon tab goes invisible

--- a/Shell/ShellWindow.xaml
+++ b/Shell/ShellWindow.xaml
@@ -57,6 +57,7 @@
             </shell:RibbonEx>
             <Grid>
                 <ContentControl regions:RegionManager.RegionName="{x:Static shared:RegionNames.ModuleContent}"
+                                x:Name="moduleContent"
                                 HorizontalAlignment="Stretch"
                                 VerticalAlignment="Stretch" />
                 <ContentControl Content="{Binding BusyMediator}"
